--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -131,7 +131,7 @@
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Lauren Conrad<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Sarah Shahi<span class="score">&nbsp;</span></a></li>
                  </ul>
              </div>
              <!-- END ROUND ONE -->
@@ -301,85 +301,85 @@
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Jennifer Connelly<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Sandra Bullock<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Lucy Hale<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Emilia Clarke<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Marisa Tomei<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Lucy Liu<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Brie Larson<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Natalie Dormer<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Christina Ricci<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Amber Heard<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Zoey Deutch<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Shailene Woodley<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <p class="group-details">Group F</p>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Anne Hathaway<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Maria Sharapova<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Jessica Chastain<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Megan Fox<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Vanessa Hudgens<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Brittany Snow<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Katy Perry<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Scarlett Johansson<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Zoe Saldana<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Rachel McAdams<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Keira Knightley<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Priyanka Chopra<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <p class="group-details">Group G</p>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Jennifer Aniston<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Karen Gillan<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Rosario Dawson<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Selena Gomez<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Kristen Bell<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Jennifer Lopez<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Kristen Stewart<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Margot Robbie<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Allison Williams<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Mila Kunis<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Alison Brie<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Jordana Brewster<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <p class="group-details">Group H</p>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Kirsten Dunst<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Blake Lively<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Melissa Benoist<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Kate Beckinsale<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Britney Spears<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Camila Cabello<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Jessica Biel<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Julianne Moore<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Katharine McPhee<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);">Emmanuel Chirqui<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="javascript:void(0);">Natalie Portman<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Winona Ryder<span class="score">&nbsp;</span></a></li>
                  </ul>
              </div>
              <!-- END ROUND ONE -->                          
