--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -51,24 +51,24 @@
                 <div class="round-details">Round 1<br/></div>
                 <p class="group-details">Group A</p>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Olivia Munn<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Sophie Turner<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Zendaya<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://redd.it/j8jsz9"  target="_blank">Olivia Munn<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://redd.it/j8jsz9"  target="_blank">Sophie Turner<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://redd.it/j8jsz9"  target="_blank">Zendaya<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Anna Kendrick<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Emily Vancamp<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Maggie Grace<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://redd.it/j8jt34"  target="_blank">Anna Kendrick<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://redd.it/j8jt34"  target="_blank">Emily Vancamp<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://redd.it/j8jt34"  target="_blank">Maggie Grace<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Stacy Keibler<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Lauren Cohan<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Heidi Klum<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://redd.it/j8jt4c"  target="_blank">Stacy Keibler<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://redd.it/j8jt4c"  target="_blank">Lauren Cohan<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://redd.it/j8jt4c"  target="_blank">Heidi Klum<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Gal Gadot<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Emily Ratajkowski<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Demi Lovato<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://redd.it/j8jt5s"  target="_blank">Gal Gadot<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://redd.it/j8jt5s"  target="_blank">Emily Ratajkowski<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://redd.it/j8jt5s"  target="_blank">Demi Lovato<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <p class="group-details">Group B</p>
                 <ul class="matchup">
