--- a/tournaments/latenightlegs.html
+++ b/tournaments/latenightlegs.html
@@ -93,45 +93,45 @@
                 </ul>
                 <p class="group-details">Group C</p>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/jdgshi" target="_blank">Hayden Panettiere<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/jdgshi" target="_blank">Emma Watson<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jdgshi" target="_blank">Hayden Panettiere<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jdgshi" target="_blank">Emma Watson<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/jdgshi" target="_blank">Dua lipa<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/jdgsj8" target="_blank">Amy Adams<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jdgsj8" target="_blank">Amy Adams<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/jdgsj8" target="_blank">Lily Collins<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/jdgsj8" target="_blank">Penelope Cruz<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jdgsj8" target="_blank">Penelope Cruz<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/jdgsl0" target="_blank">Maisie Williams<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jdgsl0" target="_blank">Maisie Williams<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/jdgsl0" target="_blank">Daisy Ridley<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/jdgsl0" target="_blank">Julie Bowen<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jdgsl0" target="_blank">Julie Bowen<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/jdgsm9" target="_blank">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jdgsm9" target="_blank">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/jdgsm9" target="_blank">Aubrey Plaza<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/jdgsm9" target="_blank">Hailee Steinfeld<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/jdgsm9" target="_blank">Hailee Steinfeld<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <p class="group-details">Group D</p>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Alice Eve<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Taylor Swift<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Bar Refaeli<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jg09ts" target="_blank">Alice Eve<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jg09ts" target="_blank">Taylor Swift<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jg09ts" target="_blank">Bar Refaeli<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Kate Mara<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Nina Dobrev<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Kelly Rohrbach<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jg09vz" target="_blank">Kate Mara<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jg09vz" target="_blank">Nina Dobrev<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jg09vz" target="_blank">Kelly Rohrbach<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Amanda Seyfried<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Cobie Smulders<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Michelle Keegan<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jg09xm" target="_blank">Amanda Seyfried<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jg09xm" target="_blank">Cobie Smulders<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jg09xm" target="_blank">Michelle Keegan<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Lauren Conrad<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Sarah Shahi<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jg09zg" target="_blank">Evangeline Lilly<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jg09zg" target="_blank">Lauren Conrad<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/jg09zg" target="_blank">Sarah Shahi<span class="score">&nbsp;</span></a></li>
                  </ul>
              </div>
              <!-- END ROUND ONE -->
@@ -154,12 +154,12 @@
                     <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Elizabeth Olsen<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Dua Lipa<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Lily Collins<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Daisy Ridley<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">Aubrey Plaza<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);" target="_blank">&nbsp;<span class="score">&nbsp;</span></a></li>
